--- a/etherpad-template.yaml
+++ b/etherpad-template.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   name: etherpad
@@ -42,8 +42,23 @@ parameters:
   description: Etherpad Image to be used
   value: "quay.io/gpte-devops-automation/etherpad:latest"
   required: true
+- description: Sets the initial memory request in Mi for the application.
+  displayName: Memory Request
+  name: MEMORY_REQUEST
+  value: "1024"
+- description: Sets the memory limit in Mi, available to the application.
+  displayName: Memory Limit
+  name: MEMORY_LIMIT
+  value: "2096"
+- description: Sets the initial CPU request for the application.
+  displayName: CPU Request
+  name: CPU_REQUEST
+  value: "0.5"
+- description: Sets the CPU limit, available to the application.
+  displayName: CPU Limit
+  name: CPU_LIMIT
+  value: "4.0"
 objects:
-
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -93,7 +108,13 @@ objects:
           ports:
           - containerPort: 9001
             protocol: TCP
-          resources: {}
+          resources: 
+            limits:
+              cpu: ${CPU_LIMIT}
+              memory: ${MEMORY_LIMIT}Mi
+            requests:
+              cpu: ${CPU_REQUEST}
+              memory: ${MEMORY_REQUEST}Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           readinessProbe:
